# nrtm

./: .gitignore  Cargo.toml  README.md  build.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: autofix.yml  ci.yml  fix.yml  release.yml
nrtm/: Cargo.toml
nrtm-installer/: Cargo.toml  README.md  main.rs
nrtm-installer/src/: main.rs
nrtm/src/: github.rs  lib.rs  main.rs  shim.rs
src/: github.rs  lib.rs  main.rs  shim.rs
xtask/: Cargo.toml  main.rs
