[package]
name = "nrtm"
version = "0.1.0"
edition = "2021"
default-run = "nrtm"

[profile.dev]
lto = "off"
codegen-units = 512

[features]
openssl = ["dep:openssl"]

[dependencies]
anyhow = "1.0"
once_cell = "1.18"
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["stream"] }
indicatif = "0.17.5"
zip = "0.6.6"
tar = "0.4.40"
flate2 = "1.0.27"

openssl = { version = "0.10", features = ["vendored"], optional = true }
