[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "nrtm",
  "nrtm-installer",
  "xtask",
]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
serde_json = "1.0.107"
zip = "0.6.6"

[profile.dev]
lto = "off"
codegen-units = 512
