[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "nrtm",
  "nrtm-installer",
  "xtask",
]

[workspace.dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.115"
which = "5.0.0"
zip = "0.6.6"

[profile.dev]
lto = "off"
codegen-units = 512

[profile.release]
lto = true
codegen-units = 1
