[package]
name = "nrtm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
once_cell = "1.19.0"
clap.workspace = true
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["stream"] }
indicatif = "0.17.8"
zip.workspace = true
tar = "0.4.40"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
serde_json.workspace = true
semver = { version = "1.0.22", features = ["serde"] }
regex = "1.10.4"
which.workspace = true

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
